Added refresh to selectpath

--- a/Ford_Fulkerson/JavaScript/index.html
+++ b/Ford_Fulkerson/JavaScript/index.html
@@ -18,7 +18,7 @@
         <span class="line"></span>
         <div>
             <button id="btn-max">Calculate Max Flow</button>
-            <button id="export-btn">Export</button>
+            <button id="btn-steps">Step by Step</button>
         </div>
         <div id="dump" class="hidden"></div>
         <div id="detail-container" class="alert alert-info" role="alert">
