--- a/Ford_Fulkerson/JavaScript/index.html
+++ b/Ford_Fulkerson/JavaScript/index.html
@@ -17,7 +17,6 @@
         <h4 class="underline">Control Panel</h4>
         <span class="line"></span>
         <div>
-            <button id="btn-max">Calculate Max Flow</button>
             <button id="btn-steps">Step by Step</button>
         </div>
         <div id="dump" class="hidden"></div>
@@ -95,31 +94,47 @@
 <script type="text/javascript" src="assets/js/fordfulkerson.js"></script>
 <script>
     var N = ((Math.random() * 7) + 6 | 0),
-        flowgraph = [],
-        i,
-        j;
+        flowgraph = [],//start graph
+        augPaths = [],//to store augmented paths
+        step = 0,
+        i,//from node
+        j;//to node
 
     for (i = 0; i < N; i++) {
-        var temp = [];
+        let temp = [];
         for (j = 0; j < N; j++) {
-            var value = 0;
+            let value = 0;
+            /*
+            * No two edges between same node (j>i :: if (j to i >0) then (i to j <0))
+            * No recursive flow to same node (j>i :: (i to i=== 0))
+            * No flow towards sink(i != N-1 :: (sink to other_nodes === 0))
+            * No flow from source(j !== 0 :: (other_nodes to source === 0)) */
             if (j > i && i !== N - 1 && j !== 0) {
+                //values can be from 6 to 19
                 value = ((Math.random() * 14) + 6 | 0);
                 temp.push(value);
             } else temp.push(value);
         }
-        flowgraph.push(temp);
+        flowgraph.push(temp);//add node to other_nodes flow
     }
 
     console.log(flowgraph);
 
-    function updategraph(u, v) {
-        selectpath(u, v, s);
+    function nextgraph(step) {
+        updatepath(augPaths[step], s);
+        console.log(augPaths[step]);
     }
 
     window.addEventListener("load", function () {
-        document.getElementById('btn-max').addEventListener('click', function () {
-            fordFulkerson(flowgraph, 0, N - 1);
+        fordFulkerson(flowgraph, 0, N - 1);
+
+        document.getElementById('btn-steps').addEventListener('click', function () {
+            if (step < augPaths.length) {
+                nextgraph(step);
+                step++;
+            } else {
+                console.log("Sink reached");
+            }
         });
     });
 
