Cleared src folder

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 <!--sigma scripts start-->
-<script src="assets/js/src/sigma-bundle.js"></script>
+<script src="assets/js/sigma-bundle.js"></script>
 <!--sigma plugins-->
 <script src="assets/js/build/plugins/sigma.renderers.edgeLabels.min.js"></script>
 <script src="assets/js/build/plugins/sigma.layout.forceAtlas2.min.js"></script>
