--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
 <div id="container">
@@ -32,6 +33,46 @@
             <h5 class="alert-heading">Generate Network</h5>
             <div id="container-network" class="container">
                 <button id="btn-auto" class="btn btn-light">Refresh</button>
+
+                <!--modal-start-->
+                <!--<hr>-->
+                <!--<form id="form-input">-->
+                    <!--<div class="form-group">-->
+                        <!--<label for="inputNodes">Number of Nodes </label>-->
+                        <!--<input type="number" class="form-control" id="inputNodes" aria-describedby="nodesHelp" required>-->
+                        <!--<small id="nodesHelp" class="form-text text-muted">Number from 6 to 12</small>-->
+                    <!--</div>-->
+                    <!--<button id="btn-input" type="submit" class="btn btn-light">-->
+                        <!--Input Data-->
+                    <!--</button>-->
+                <!--</form>-->
+
+                <!-- Modal -->
+                <div class="modal fade" id="inputModal" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Fill table</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <!--table-start-->
+                                <div class="row">
+
+                                </div>
+                                <!--table-end-->
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Import changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--model-end-->
             </div>
 
         </div>
